--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,4 +1,5 @@
 /*! purgecss start ignore */
+@import "./fonts.css";
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "./components.css";
