--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -4,5 +4,7 @@
 @import "tailwindcss/components";
 @import "./components.css";
 /*! purgecss end ignore */
+/* Keen Slider */
+@import "keen-slider/keen-slider.min.css";
 @import "tailwindcss/utilities";
 @import "./utilities.css";
