Feature/back to top button (#9)
* Add sticky scroll up button

* Button position

* Fix back to top button

Co-authored-by: Luke Bennett <l.bennett@phirannodesigns.com.au>

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -16,6 +16,10 @@ body,
   height: -webkit-fill-available;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Add a background colour so that when you overscroll (iOS and macOS) you can see the colour underneath */
 body {
   @apply bg-sky-blue;
