Convert menu to use @reach/tabs (#11)
* Convert menu to use @reach/tabs

* Clean up CSS

* Use @apply instead of writing CSS rule

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -35,3 +35,17 @@ button:focus {
 ::selection {
   @apply text-white bg-slate;
 }
+
+/*
+ * Override styles for @reach/tabs
+ */
+
+/* Reset border */
+[data-reach-tab-list].divide-y > * + * {
+  @apply border-t border-gray-300 border-solid;
+}
+
+/* Remove border-bottom on active tab */
+[data-reach-tab][data-selected] {
+  @apply border-b-0 border-gray-300 border-solid;
+}
