--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -7,4 +7,8 @@
   .fill-available {
     min-height: -webkit-fill-available;
   }
+
+  .text-shadow {
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+  }
 }
