Turn off animations for users who prefer reducted motion

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -55,3 +55,12 @@ ul.keen-slider {
   user-select: auto;
 }
 
+/* Turn off animations for people who have the prefers-reduced-motion query enabled */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
