--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -8,6 +8,10 @@
     min-height: -webkit-fill-available;
   }
 
+  .drop-shadow {
+    filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.125));
+  }
+
   .text-shadow {
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
   }
